# NeneBouquet

./: .gitignore  CppDevEnvSetup.md  NeneCMakeTips.md  NeneCookiecutter.md  NeneDevEnv.md  NeneGitTips.md  NeneLibTemplate.md  NeneOMP.md  NeneYOLO.md  README.md
CppDevEnv/: 01.md  02.md  03.md
NeneYOLO/: memo.md  test.py
Templates/01/: .gitmodules  CMakeLists.txt  README.md
Templates/01/include/NeneLibrary/: NeneLib1.hpp  NeneLib2.hpp
Templates/01/src/: NeneLib1.cpp  NeneLib2.cpp
Templates/01/tests/: CMakeLists.txt
